# TJH-Beta

./: .gitignore
backend/: AUTHENTICATION.md  env.example  main.py  pyproject.toml  requirements.txt  settings.py
backend/db/: users_table.sql
backend/dependencies/: __init__.py  auth.py
backend/migrations/: __init__.py  create_sessions_table.py  sessions_table_schema.sql
backend/models/: auth.py
backend/routes/: __init__.py  auth.py
backend/services/: auth_service.py  session_service.py  supabase_service.py
backend/tests/: test_indeed_max_limit.py
backend/utils/: countries.py  indeed_service.py  job_scanner.py  linkedin_jobspy_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
