[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the TJH job search tool"
readme = "README.md"
# Use a stable, widely supported Python version in production.
# Python 3.11 works well on most hosts (Railway/Render/Fly/GitHub Actions, etc.).
requires-python = ">=3.13"
dependencies = [
    # Core web stack
    "fastapi==0.122.0",
    "uvicorn[standard]==0.38.0",
    "requests==2.32.5",
    # Settings and validation
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "typing-extensions==4.15.0",
    # Data / utilities – kept aligned with requirements.txt
    "pandas==2.3.3",
    "numpy==1.26.3",
    "openpyxl==3.1.5",
    "pytz==2025.2",
    "tabulate==0.9.0",
    "apify-client==2.3.0",
    "apify-shared==2.1.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "more-itertools==10.8.0",
    "typing-inspection==0.4.2",
    # JobSpy for LinkedIn scraping
    "python-jobspy==1.1.79",
    # BeautifulSoup for HTML parsing (Indeed scraper)
    "beautifulsoup4==4.14.3",
    # Rate limiting
    "slowapi==0.1.9",
    # Supabase client for caching / storage
    "supabase==2.24.0",
    "fastmcp==2.13.3",
    "sqlalchemy==2.0.45",
    "python-multipart==0.0.20",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==5.0.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "authlib==1.6.5",
    "beartype==0.22.8",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "cyclopts==4.3.0",
    "deprecated==1.3.1",
    "deprecation==2.1.0",
    "diskcache==5.6.3",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.3",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.1",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "hyperframe==6.1.0",
    "idna==3.11",
    "impit==0.9.3",
    "iniconfig==2.3.0",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "limits==5.6.0",
    "markdown-it-py==4.0.0",
    "markdownify==0.13.1",
    "mcp==1.22.0",
    "mdurl==0.1.2",
    "multidict==6.7.0",
    "openapi-pydantic==0.5.1",
    "packaging==25.0",
    "pathable==0.4.4",
    "pathvalidate==3.3.1",
    "pip==25.3",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "postgrest==2.24.0",
    "propcache==0.4.1",
    "py-key-value-aio==0.3.0",
    "py-key-value-shared==0.3.0",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pyperclip==1.11.0",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "realtime==2.24.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "rich==14.2.0",
    "rich-rst==1.3.2",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sse-starlette==3.0.3",
    "starlette==0.50.0",
    "storage3==2.24.0",
    "strenum==0.4.15",
    "supabase-auth==2.24.0",
    "supabase-functions==2.24.0",
    "tls-client==1.0.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "wrapt==2.0.1",
    "yarl==1.22.0",
]

[dependency-groups]
dev = [
    "pyflakes>=3.4.0",
    "pytest>=8.3.0",
]
